--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>studentsite</title>
 </head>
 <body>
-    Hi I am Rishi
+    Hi I am Rishi. Welcome to my first website!
 </body>
 </html>
