fix: added hobbies

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     Hi I am Rishi. Welcome to my first website!
+
+    I love to code. I also love playing and watching football.
 </body>
 </html>
