--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
     Hi I am Rishi. Welcome to my first website!
 
-    I love to code. I also love playing and watching football.
+    I like to code. I also enjoy playing and watching football.
 </body>
 </html>
