fix: updated hobbies

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     Hi I am Rishi. Welcome to my first website!
 
     I like to code. I also enjoy playing and watching football.
+    I also play the guitar
 </body>
 </html>
