--- a/index.html
+++ b/index.html
@@ -4,12 +4,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>studentsite</title>
+    <title>Component Library</title>
 </head>
 <body>
-    Hi I am Rishi. Welcome to my first website!
+    <h1>Welcome to My Component Library</h1>
+    <p>I am making a component library which will make all my projects look good and consistent</p> 
 
-    I like to code. I also enjoy playing and watching football.
-    I also play the guitar
+    <hr>
+
+    <h2>@typography</h2>
+
+    <h1>This is the biggest heading</h1>
+    <h2>Second biggest</h2>
+    <p>This is normal free flowing text which will wrap at the end like a paragraph</p>
+    <small>This is relatively smaller text</small>
+
+    <hr>
+
+    <h2>@container</h2>
+
+    <h3>fluid container</h3>
+    <div>This is a fluid container and will go till the end of the page</div>
+    <h3>center container</h3>
+    <div>This is a centered container which will go till the specified width</div>
+
+    <hr>
+
+    <h3>@links</h3>
+    
+    <a href="/">Primary Link</a>
+    <a href="/">Secondary Link</a>
 </body>
 </html>
