--- a/index.html
+++ b/index.html
@@ -30,9 +30,27 @@
 
     <hr>
 
-    <h3>@links</h3>
+    <h2>@links</h3>
     
     <a href="/">Primary Link</a>
     <a href="/">Secondary Link</a>
+
+    <hr>
+
+    <h2>@lists</h2>
+    
+    <h3>unordered list</h3>
+    <ul>
+        <li>Item One</li>
+        <li>Item Two</li>
+        <li>Item Three</li>
+    </ul>
+
+    <h3>inline unordered list</h3>
+    <ul>
+        <li>Inline Item One</li>
+        <li>Inline Item Two</li>
+        <li>Inline Item Three</li>
+    </ul>
 </body>
 </html>
