--- a/index.html
+++ b/index.html
@@ -52,5 +52,23 @@
         <li>Inline Item Two</li>
         <li>Inline Item Three</li>
     </ul>
+
+    <h3>ordered list</h3>
+    <ol>
+        <li>Inline Item One</li>
+        <li>Inline Item Two</li>
+        <li>Inline Item Three</li>
+    </ol>
+
+    <h3>reverse ordered list</h3>
+    <ol>
+        <li>Inline Item Three</li>
+        <li>Inline Item Two</li>
+        <li>Inline Item One </li>
+    </ol>
+
+    <hr>
+
+    
 </body>
 </html>
