--- a/index.html
+++ b/index.html
@@ -68,6 +68,31 @@
     </ol>
 
 
+    <h2>@nav</h2>
+    <nav>
+        <div>IAmDeveloper</div>
+        <ul>
+            <li>
+                <a href="/">home</a>
+            </li>
+            <li>
+                <a href="/">projects</a>
+            </li>
+            <li>
+                <a href="/">about</a>
+            </li>
+        </ul>
+    </nav>
+
+    <hr>
+
+    <h2>@header</h2>
+
+    <header>
+        <img src="images/hero.svg" />
+        <h1>Heading inside hero</h1>
+    </header>
+
 
 
 </body>
