--- a/index.html
+++ b/index.html
@@ -87,13 +87,35 @@
     <hr>
 
     <h2>@header</h2>
-
     <header>
         <img src="images/hero.svg" />
         <h1>Heading inside hero</h1>
     </header>
 
+    <hr>
 
+    <h2>@section</h2>
+    <section>
+        <h3>white section</h3>
+        <p>This will have white background</p>
+    </section>
+
+    <section>
+        <h3>offwhite section</h3>
+        <p>This will have grey background</p>
+    </section>
+
+    <hr>
+
+    <h2>@footer</h2>
+    <footer>
+        <div>Some small heading inside footer</div>
+        <ul>
+            <li>SocialOne</li>
+            <li>SocialTwo</li>
+            <li>SocialThree</li>
+        </ul>
+    </footer>
 
 </body>
 </html>
