--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Component Library</title>
+    <link href="styles.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -26,9 +27,9 @@
     <h2>@container</h2>
 
     <h3>fluid container</h3>
-    <div>This is a fluid container and will go till the end of the page</div>
+    <div class="container">This is a fluid container and will go till the end of the page</div>
     <h3>center container</h3>
-    <div>This is a centered container which will go till the specified width</div>
+    <div class="container container-center" >This is a centered container which will go till the specified width</div>
 
     <hr>
 
