--- a/index.html
+++ b/index.html
@@ -43,28 +43,22 @@
         <h2>@lists</h2>
 
         <h3>unordered list</h3>
-        <ul>
+        <p>This list will not have bullets</p>
+        <ul class="list-non-bullet">
             <li>Item One</li>
             <li>Item Two</li>
             <li>Item Three</li>
         </ul>
 
         <h3>inline unordered list</h3>
-        <ul>
-            <li>Inline Item One</li>
-            <li>Inline Item Two</li>
-            <li>Inline Item Three</li>
+        <ul class="list-non-bullet">
+            <li class="list-item-inline">Inline Item One</li>
+            <li class="list-item-inline">Inline Item Two</li>
+            <li class="list-item-inline">Inline Item Three</li>
         </ul>
 
-        <h3>ordered list</h3>
-        <ol>
-            <li>Inline Item One</li>
-            <li>Inline Item Two</li>
-            <li>Inline Item Three</li>
-        </ol>
-
         <h3>reverse ordered list</h3>
-        <ol>
+        <ol reversed>
             <li>Inline Item Three</li>
             <li>Inline Item Two</li>
             <li>Inline Item One </li>
