--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
         <hr>
 
         <h2>@header</h2>
-        <header>
-            <img src="images/hero.svg" />
-            <h1>Heading inside hero</h1>
+        <header class="hero">
+            <img class="hero-image" src="images/hero.svg" />
+            <h1 class="hero-heading">My <span style="color: var(--primary-color)">Web Development</span> Portfolio</h1>
         </header>
 
         <hr>
