--- a/index.html
+++ b/index.html
@@ -1,120 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Component Library</title>
-    <link href="styles.css" rel="stylesheet" />
+    <title>home</title>
 </head>
-
 <body>
-    <h1>Welcome to My Component Library</h1>
-    <p>I am making a component library which will make all my projects look good and consistent</p>
-
-    <hr>
-
-    <h2>@typography</h2>
-
-    <h1>This is the biggest heading</h1>
-    <h2>Second biggest</h2>
-    <p>This is normal free flowing text which will wrap at the end like a paragraph</p>
-    <small>This is relatively smaller text</small>
-
-    <hr>
-
-    <h2>@container</h2>
-
-    <h3>fluid container</h3>
-    <div class="container">This is a fluid container and will go till the end of the page</div>
-    <h3>center container</h3>
-    <div class="container container-center" >This is a centered container which will go till the specified width</div>
-
-    <hr>
-
-    <h2>@links</h3>
-
-        <a class="link link-primary" href="/">Primary Link</a>
-        <a class="link link-secondary" href="/">Secondary Link</a>
-
-        <hr>
-
-        <h2>@lists</h2>
-
-        <h3>unordered list</h3>
-        <p>This list will not have bullets</p>
-        <ul class="list-non-bullet">
-            <li>Item One</li>
-            <li>Item Two</li>
-            <li>Item Three</li>
-        </ul>
-
-        <h3>inline unordered list</h3>
-        <ul class="list-non-bullet">
-            <li class="list-item-inline">Inline Item One</li>
-            <li class="list-item-inline">Inline Item Two</li>
-            <li class="list-item-inline">Inline Item Three</li>
-        </ul>
-
-        <h3>reverse ordered list</h3>
-        <ol reversed>
-            <li>Inline Item Three</li>
-            <li>Inline Item Two</li>
-            <li>Inline Item One </li>
-        </ol>
-
-        <hr>
-
-        <h2>@nav</h2>
-        <nav class="navigation container">
-            <div class="nav-brand">IAmDeveloper</div>
-            <ul class="list-non-bullet nav-pills">
-                <li class="list-item-inline">
-                    <a class="link link-active" href="/">home</a>
-                </li>
-                <li class="list-item-inline">
-                    <a class="link" href="/">projects</a>
-                </li>
-                <li class="list-item-inline">
-                    <a class="link" href="/">about</a>
-                </li>
-            </ul>
-        </nav>
-
-        <hr>
-
-        <h2>@header</h2>
-        <header class="hero">
-            <img class="hero-image" src="images/hero.svg" />
-            <h1 class="hero-heading">My <span style="color: var(--primary-color)">Web Development</span> Portfolio</h1>
-        </header>
-
-        <hr>
-
-        <h2>@section</h2>
-        <section>
-            <h3>white section</h3>
-            <p>This will have white background</p>
-        </section>
-
-        <section>
-            <h3>offwhite section</h3>
-            <p>This will have grey background</p>
-        </section>
-
-        <hr>
-
-        <h2>@footer</h2>
-        <footer>
-            <div>Some small heading inside footer</div>
-            <ul>
-                <li>SocialOne</li>
-                <li>SocialTwo</li>
-                <li>SocialThree</li>
-            </ul>
-        </footer>
-
+    <h1>Hrishikesh Bolinjkar</h1>
 </body>
-
 </html>
