--- a/lib/components.html
+++ b/lib/components.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Component Library</title>
-    <link href="styles.css" rel="stylesheet" />
+    <link href="/styles.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -86,7 +86,7 @@
 
         <h2>@header</h2>
         <header class="hero">
-            <img class="hero-image" src="images/hero.svg" />
+            <img class="hero-image" src="/images/hero.svg" />
             <h1 class="hero-heading">My <span style="color: var(--primary-color)">Web Development</span> Portfolio</h1>
         </header>
 
@@ -94,19 +94,17 @@
 
         <h2>@section</h2>
         <section class="section">
-            <div class="container contaiiner-center">
+            <div class="container container-center">
                 <h1>white section</h1>
                 <p>The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.</p>
             </div>
-
         </section>
 
         <section class="section ow">
-            <div class="container contaiiner-center">
+            <div class="container container-center">
                 <h1>offwhite section</h1>
                 <p>The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.</p>
             </div>
-
         </section>
 
         <hr>
