updated with nav bars on all pages

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <title>home</title>
     <link href="styles.css" rel="stylesheet" />
 </head>
+
 <body>
     <nav class="navigation container">
         <div class="nav-brand">WEBDEVELOPER</div>
@@ -20,6 +22,9 @@
             <li class="list-item-inline">
                 <a class="link" href="/blogs.html">Blogs</a>
             </li>
+            <li class="list-item-inline">
+                <a class="link" href="/about.html">About Me</a>
+            </li>
         </ul>
     </nav>
 
@@ -31,28 +36,29 @@
     <section class="section ow">
         <div class="container container-center">
             <h1>Technologies</h1>
-            <p>The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.</p>
+            <p>I am familiar with HTML5, CSS3, Git, Github, Javascript, ReactJS, NodeJS, Flutter, Firebase and Web
+                Hosting</p>
         </div>
     </section>
 
     <section class="section">
         <div class="container container-center">
             <h1>Projects</h1>
-            <p>The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.</p>
-            <a class="link link-primary" href="/">Browse projects</a>
+            <p>I love to showcase my work and you can check some of my projects hosted online </p>
+            <div style="padding: 1rem 0rem;"><a class="link link-secondary" href="/">Browse projects</a></div>
         </div>
     </section>
 
     <section class="section ow">
         <div class="container container-center">
             <h1>Blogs</h1>
-            <p>The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.</p>
-            <a class="link link-primary" href="/">Read blogs</a>
+            <p>I also try to document my journey by writing some technical and non techinal blogs. Do check them out</p>
+            <div style="padding: 1rem 0rem;"><a class="link link-secondary" href="/">Read blogs</a></div>
         </div>
     </section>
 
     <footer class="footer">
-        <div class="footer-header">Connect with me</div>
+        <div class="footer-header">Social Media</div>
         <ul class="social-links list-non-bullet">
             <li class="list-item-inline">
                 <a class="link" href="/">
@@ -73,4 +79,5 @@
     </footer>
 
 </body>
+
 </html>
