--- a/lib/components.html
+++ b/lib/components.html
@@ -58,7 +58,7 @@
         </ul>
 
         <h3>reverse ordered list</h3>
-        <ol reversed>
+        <ol>
             <li>Inline Item Three</li>
             <li>Inline Item Two</li>
             <li>Inline Item One </li>
@@ -71,13 +71,16 @@
             <div class="nav-brand">IAmDeveloper</div>
             <ul class="list-non-bullet nav-pills">
                 <li class="list-item-inline">
-                    <a class="link link-active" href="/">home</a>
+                    <a class="link link-active" href="/">Home</a>
                 </li>
                 <li class="list-item-inline">
-                    <a class="link" href="/">projects</a>
+                    <a class="link" href="/">Projects</a>
                 </li>
                 <li class="list-item-inline">
-                    <a class="link" href="/">about</a>
+                    <a class="link" href="/">Blogs</a>
+                </li>
+                <li class="list-item-inline">
+                    <a class="link" href="/">About</a>
                 </li>
             </ul>
         </nav>
