--- a/about.html
+++ b/about.html
@@ -14,26 +14,19 @@
         <div class="nav-brand">WEBDEVELOPER</div>
         <ul class="list-non-bullet nav-pills">
             <li class="list-item-inline">
-                <a class="link " href="/">Home</a>
+                <a class="link" href="/">Home</a>
             </li>
             <li class="list-item-inline">
-                <a class="link link-active" href="/">Projects</a>
+                <a class="link" href="/projects.html">Projects</a>
             </li>
             <li class="list-item-inline">
                 <a class="link" href="/blogs.html">Blogs</a>
             </li>
             <li class="list-item-inline">
-                <a class="link" href="/about.html">About Me</a>
+                <a class="link link-active" href="/about.html">About Me</a>
             </li>
         </ul>
     </nav>
-    <ol>
-        <li></li>
-        <li>Inline Item Two</li>
-        <li>Inline Item One </li>
-    </ol>
-
-
 
 </body>
 
