updated social media links

--- a/index.html
+++ b/index.html
@@ -61,17 +61,17 @@
         <div class="footer-header">Social Media</div>
         <ul class="social-links list-non-bullet">
             <li class="list-item-inline">
-                <a class="link" href="/">
+                <a class="link" href="https://github.com/r7sh7">
                     Github
                 </a>
             </li>
             <li class="list-item-inline">
-                <a class="link" href="/">
+                <a class="link" href="https://www.linkedin.com/in/rishi-bolinjkar-211a43174">
                     LinkdIn
                 </a>
             </li>
             <li class="list-item-inline">
-                <a class="link" href="/">
+                <a class="link" href="https://twitter.com/R7sh71">
                     Twitter
                 </a>
             </li>
