--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="container container-center">
             <h1>Projects</h1>
             <p>I love to showcase my work and you can check some of my projects hosted online </p>
-            <div style="padding: 1rem 0rem;"><a class="link link-secondary" href="/">Browse projects</a></div>
+            <div style="padding: 1rem 0rem;"><a class="link link-secondary" href="projects.html">Browse projects</a></div>
         </div>
     </section>
 
@@ -53,7 +53,7 @@
         <div class="container container-center">
             <h1>Blogs</h1>
             <p>I also try to document my journey by writing some technical and non techinal blogs. Do check them out</p>
-            <div style="padding: 1rem 0rem;"><a class="link link-secondary" href="/">Read blogs</a></div>
+            <div style="padding: 1rem 0rem;"><a class="link link-secondary" href="blogs.html">Read blogs</a></div>
         </div>
     </section>
 
