--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projects</title>
+    <title>about me</title>
     <link href="styles.css" rel="stylesheet" />
 </head>
 
@@ -27,6 +27,14 @@
             </li>
         </ul>
     </nav>
+
+    <section class="section ow" style="height: 100vh;">
+        <div class="container container-center">
+            <img class= "my-display-image" src="images/me.jpg" />
+            <h1>Hi I am Hrishikesh Bolinjkar</h1>
+            <p>Hi I am Hrishikesh BolinjkarHi I am Hrishikesh BolinjkarHi I am Hrishikesh BolinjkarHi I am Hrishikesh BolinjkarHi I am Hrishikesh BolinjkarHi I am Hrishikesh BolinjkarHi I am Hrishikesh BolinjkarHi I am Hrishikesh Bolinjkar</p>
+        </div>
+    </section>
 
 </body>
 
