--- a/blogs/blog1.html
+++ b/blogs/blog1.html
@@ -17,7 +17,7 @@
     </header>
     <div class="container container-center">
         <h1 style="font-weight: 100;">Music Archive Library Management</h1>
-        <div style="margin: 3rem 1.5rem 0rem 0rem"><h2>Introduction</h2></div>
+        <div style="margin: 3rem 1.5rem 0rem 0rem"><h2>Introduction</h2>
         <p>
             Indian classical music is a rich tradition that originated in South Asia and can now be found in all corners of the world. It’s origins date back to sacred Vedic scriptures over 6,000 years ago where chants developed a system of musical notes and rhythmic cycles.
 In this way, Indian classical music is very closely connected to nature, taking inspiration from natural phenomena including the seasons and times of the day to create ‘ragas’ or musical moods and many time cycles or ‘taals’ that have been further codified.
@@ -25,13 +25,13 @@ In this way, Indian classical music is very closely connected to nature, taking 
         </p>
         <p>Indian classical music is generally passed down in an oral tradition where the student would spend many years with their ‘guru’, developing a very special, spiritual bond, imbibing all aspects of the music along with philosophical and moral principles that shape them for life.
             In recent times, Indian classical music can be learnt in many institutions and has been heavily documented and notated. The recordings of several big artists who have sung self composed classical songs at various important events have been preserved for further study by researchers and scholars in the field. One such organisation, <strong>Jaipur Gunijankhana</strong> of Pune, has a well documented archive of recordings of some popular artists in the country.</p>
-            <p>The main aim of Jaipur Gunijankhana is to provide a medium for people to study and listen to these recordings while restricting their use to non profit purposes only.</p>
+            <p>The main aim of Jaipur Gunijankhana is to provide a medium for people to study and listen to these recordings while restricting their use to non profit purposes only.</p></div>
 
-           <div style="margin: 3rem 1.5rem 0rem 0rem"><h2>Problem </h2></div> 
+           <div style="margin: 3rem 1.5rem 0rem 0rem"><h2>Problem </h2>
            <p>Jaipur Gunijankhana is an organisation that has a collection of music recordings stored in a cloud storage(google drive) along with a well documented excel file which contains data about the artists, their albums and all the recordings. 
             They wanted to provide an interface for their users to access the classical music recordings strictly for non profit purposes in a way that no user can actually download or have a copy of any recording which could be sold and profited off. They also wanted to track the users to see which songs they were listening to and other data for analysis. 
             </p>
-            <p>A group of two other friends and I were given this project to come up with a solution for the problem.</p>
+            <p>A group of two other friends and I were given this project to come up with a solution for the problem.</p></div> 
 
             <div style="margin: 3rem 1.5rem 0rem 0rem"><h2>Solution</h2>
             <p>After some research and discussion with our mentors, we came up with the solution of using <strong>Plex Media Server</strong> as an interface for the users to access the recordings.</p>
@@ -77,7 +77,7 @@ In this way, Indian classical music is very closely connected to nature, taking 
                 <li><p>While testing to see if the music files added to plex were audible and functioning as expected, we could not hear any audio. After some research I learnt that VNC connections to remote servers does not support audio connections. To solve this issue I learnt how to configure the plex server for remote access (directly from my local machine’s browser). I did this by configuring certain ports on the ubuntu server to allow remote connections to the plex server which resides on the ubuntu server.</p></li>
             </ul>   
             </div> 
-            <div style="margin: 3rem 1.5rem 0rem 0rem"><h2>Conclusion</h2>
+            <div style="margin: 3rem 0rem"><h2>Conclusion</h2>
                 <p> I am really grateful to have gotten this opportunity to work on a project which would enable research and study on the rich musical heritage of my country.
                     This was the first time I was working on such a project and had to learn on the go to complete some of the tasks. I would encourage everyone to try and set up a virtual server at least once to experience and learn some of the concepts of computer networking! :)
                     </p>
