update : about me

--- a/about.html
+++ b/about.html
@@ -31,8 +31,8 @@
     <section class="section ow" style="height: 100vh;">
         <div class="container container-center">
             <img class= "my-display-image" src="images/me.jpg" />
-            <h1>Hi I am Hrishikesh Bolinjkar</h1>
-            <p>Hi I am Hrishikesh BolinjkarHi I am Hrishikesh BolinjkarHi I am Hrishikesh BolinjkarHi I am Hrishikesh BolinjkarHi I am Hrishikesh BolinjkarHi I am Hrishikesh BolinjkarHi I am Hrishikesh BolinjkarHi I am Hrishikesh Bolinjkar</p>
+            <h1>Hi! I am Hrishikesh Bolinjkar</h1>
+            <p>I am a Computer Science student at Fergusson College Pune. I am extremely fascinated by the latest technology trends and love to build solutions by leveraging technology. Apart from coding, I also love playing football. The love for the sport has enabled me to build a mobile application that provides an easy solution for the booking and management of football turfs, which are gaining popularity in my city. </p>
         </div>
     </section>
 
