--- a/blogs.html
+++ b/blogs.html
@@ -35,7 +35,7 @@
         <li>
             <article class="showcase-list container container-center ">
             <h1 style="margin-bottom: 0.5rem;">
-                <a class="link-primary" href="blogs/blog1.html">My experience in setting up a Remote Server</a>
+                <a class="link-primary" href="blogs/blog1.html" target="_blank">My experience in setting up a Remote Server</a>
             </h1>
             <small>May 2, 2021</small>
             <p>This is a music archive library management project. Indian classical music is a rich tradition that...</p>
