--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
         <div class="container container-center">
             <img class= "my-display-image" src="images/me.jpg" />
             <h1>Hi! I am Hrishikesh Bolinjkar</h1>
-            <p>I am a Computer Science student at Fergusson College Pune. I am extremely fascinated by the latest technology trends and love to build solutions by leveraging technology. Apart from coding, I also love playing football. The love for the sport has enabled me to build a mobile application that provides an easy solution for the booking and management of football turfs, which are gaining popularity in my city. </p>
+            <p>I am a Computer Science student at Fergusson College Pune. Science fiction movies and Iron Man in particular, inspired me to pursue a career in Computer Science. I love keeping up with latest trends in technology and also building solutions by leveraging it. Apart from coding I am football enthusiast and love playing as well as watching football. My interest in football and tech gave rise to the idea of a Turf Booking App for easy booking as well as management of turf bookings. This encouraged me to pursue a career in web development</p>
         </div>
     </section>
 
