--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 </ul>
                 <div class="theme-toggle">Switch</div>
             </nav>
-        <section class="intro">
+        <section class="container">
             <img src="/images/me.jpg" alt="Hrishikesh Bolinjkar display picture" class="display-pic">
             <p class="intro-title">Hi, I'm Hrishikesh Bolinjkar</p>
             <h1 class="intro-heading">Building modern and beautiful<br>web apps.</h1>
@@ -31,8 +31,7 @@
             </div>
             <div class="feature-content-container">
                 <h1 class="feature-heading">About Me</h1>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                <p class="feature-content">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                 <a href="#" class="button button-secondary">Go to Projects</a>
             </div>
         </section>
@@ -42,39 +41,39 @@
             </div>
             <div class="feature-content-container">
                 <h1 class="feature-heading">Blogs</h1>
-                <p class="feature-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                <p class="feature-content">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
                 <a href="#" class="button button-secondary">Go to Blogs</a>
             </div>
         </section>
-        <section id="contact" class="contact">
-            <h1 class="contact-heading">Lets Talk!</h1>
+        <section id="contact" class="container">
+            <h1 class="contact-heading">Let's Connect!</h1>
             <p class="contact-content">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-            <div class="social-links">
-                <a><img src="./images/svg-icon-pack/github.svg" height="24px" width="24px"></a>
-                <a><img src="./images/svg-icon-pack/insta.svg" height="24px" width="24px"></a>
-                <a><img src="./images/svg-icon-pack/lindkin.svg" height="24px" width="24px"></a>
-                <a><img src="./images/svg-icon-pack/twitter.svg" height="24px" width="24px"></a>
+            <div class="social-link-container">
+                <a><img src="./images/svg-icon-pack/github.svg" height="20px" width="20px"></a>
+                <a><img src="./images/svg-icon-pack/insta.svg" height="20px" width="20px"></a>
+                <a><img src="./images/svg-icon-pack/linkdin.svg" height="20px" width="20px"></a>
+                <a><img src="./images/svg-icon-pack/twitter.svg" height="20px" width="20px"></a>
             </div>
             <p class="contact-subheading">
                 Or write to me at <br>
-                <a href="bolinjkar.rishi@gmail.com">bolinjkar.rishi@gmail.com</a>
+                <a href="bolinjkar.rishi@gmail.com" class="text-highlight email">bolinjkar.rishi@gmail.com</a>
             </p>
         </section>
     </div>
-    <footer class="footer-container">
+    <footer class="footer-container container">
         <a href="/" class="footer-heading">Hrishikesh Bolinjkar</a>
-        <nav class="footer-nav">
+        <nav class="footer-nav-container">
             <ul class="footer-nav-menu">
                 <li><a href="/" class="nav-item active">Home</a></li>
                 <li><a href="/projects.html" class="nav-item ">Projects</a></li>
                 <li><a href="/blogs.html" class="nav-item ">Blogs</a></li>
             </ul>
         </nav>
-        <div class="social-links">
-            <a><img src="./images/svg-icon-pack/github.svg" height="24px" width="24px"></a>
-            <a><img src="./images/svg-icon-pack/insta.svg" height="24px" width="24px"></a>
-            <a><img src="./images/svg-icon-pack/lindkin.svg" height="24px" width="24px"></a>
-            <a><img src="./images/svg-icon-pack/twitter.svg" height="24px" width="24px"></a>
+        <div class="social-link-container">
+            <a><img src="./images/svg-icon-pack/github.svg" height="20px" width="20px"></a>
+            <a><img src="./images/svg-icon-pack/insta.svg" height="20px" width="20px"></a>
+            <a><img src="./images/svg-icon-pack/linkdin.svg" height="20px" width="20px"></a>
+            <a><img src="./images/svg-icon-pack/twitter.svg" height="20px" width="20px"></a>
         </div>
     </footer>
     
