style: homepage for large tablets and laptops done

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         <section class="container">
             <img src="/images/me.jpg" alt="Hrishikesh Bolinjkar display picture" class="display-pic">
             <p class="intro-title">Hi, I'm Hrishikesh Bolinjkar</p>
-            <h1 class="intro-heading">Building modern and beautiful<br>web apps.</h1>
-            <p class="intro-subheading">a <span class="text-highlight">Web Developer</span> focused on<br><span class="text-highlight"> detail oriented</span> and<span class="text-highlight"> responsive </span> web development.</p>
+            <h1 class="intro-heading">Building modern and beautiful web apps.</h1>
+            <p class="intro-subheading">a <span class="text-highlight">Web Developer</span> focused on<span class="text-highlight"> detail oriented</span> and<span class="text-highlight"> responsive </span> web development.</p>
             <a href="#contact" class="button button-primary">Connect with me</a>
         </section>
         <section class="feature container">
@@ -37,7 +37,7 @@
         </section>
         <section class="feature-rev container">
             <div class="feature-image-container">
-                <img src="/images/me.jpg" alt="About me image" class="feature-image">
+                <img src="./images/blog_img.jpg" alt="Blog image" class="feature-image">
             </div>
             <div class="feature-content-container">
                 <h1 class="feature-heading">Blogs</h1>
@@ -60,16 +60,16 @@
             </p>
         </section>
     </div>
-    <footer class="footer-container container">
+    <footer class="footer-container">
         <a href="/" class="footer-heading">Hrishikesh Bolinjkar</a>
         <nav class="footer-nav-container">
             <ul class="footer-nav-menu">
-                <li><a href="/" class="nav-item active">Home</a></li>
+                <li><a href="/" class="nav-item">Home</a></li>
                 <li><a href="/projects.html" class="nav-item ">Projects</a></li>
                 <li><a href="/blogs.html" class="nav-item ">Blogs</a></li>
             </ul>
         </nav>
-        <div class="social-link-container">
+        <div class="social-link-container social-link-footer">
             <a><img src="./images/svg-icon-pack/github.svg" height="20px" width="20px"></a>
             <a><img src="./images/svg-icon-pack/insta.svg" height="20px" width="20px"></a>
             <a><img src="./images/svg-icon-pack/linkdin.svg" height="20px" width="20px"></a>
