style: responsive home page layout done

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </section>
         <section id="contact" class="container">
             <h1 class="contact-heading">Let's Connect!</h1>
-            <p class="contact-content">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+            <p class="contact-content">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. <br><br>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
             <div class="social-link-container">
                 <a><img src="./images/svg-icon-pack/github.svg" height="20px" width="20px"></a>
                 <a><img src="./images/svg-icon-pack/insta.svg" height="20px" width="20px"></a>
@@ -56,7 +56,7 @@
             </div>
             <p class="contact-subheading">
                 Or write to me at <br>
-                <a href="bolinjkar.rishi@gmail.com" class="text-highlight email">bolinjkar.rishi@gmail.com</a>
+                <a href="bolinjkar.rishi@outlook.com" class="text-highlight email">bolinjkar.rishi@outlook.com</a>
             </p>
         </section>
     </div>
