--- a/lib/components.html
+++ b/lib/components.html
@@ -10,18 +10,38 @@
 <body>
     <div class='body-container'>
         <header>
-            <nav class='nav-container'>
-                <ul class='nav-list'>
-                    <li class="nav-logo"><a href="#">H B</a></li>
-                    <ul class='nav-menu'>
-                        <li><a class="nav-item active" href="#">Home</a></li>
-                        <li><a class="nav-item" href="#">Projects</a></li>
-                        <li><a class="nav-item" href="#">Blogs</a></li>
-                    </ul>
-                    <li class="nav-switch"><a href="#">Toggle Switch</a></li>
+            <a class="logo" href="#">H B</a>
+            <nav>
+                <ul class="nav-list">
+                    <li><a class="nav-item active" href="#">Home</a></li>
+                    <li><a class="nav-item" href="#">Projects</a></li>
+                    <li><a class="nav-item" href="#">Blogs</a></li>
                 </ul>
             </nav>
+            <div class="toggle">
+                Toggle 
+            </div>
         </header>
+        <section class="hero">
+            <img src="/images/me.jpg" alt="Hrishikesh Bolinjkar" class="hero-image"/>
+            <p class="hero-title"> Hi, I'm Hrishikesh Bolinjkar </p>
+            <h1 class="hero-heading">Building beautiful and modern web apps.</h1>
+            <p class="hero-subheading">a <span class="text-highlight">Web Developer</span class="text-highlight"> focused on <span class="text-highlight">detail oriented</span> design and development</p>
+            <a href="#" class="button button-primary">Connect with me</a>
+        </section>
+        <section class="container feature">
+            <div>
+                <img src="/images/me.jpg" alt="Hrishikesh Bolinjkar" class="feature-image"/>
+            </div>
+            <div>
+                <h1>About Me</h1>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+                <p>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                </p>
+            </div>
+            
+        </section>
     </div>
 </body>
 </html>
